// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pickCorrectInsightWording > should return translations with insight when enableInsightToReport is set to false 1`] = `
{
  "mock.translation": "Insight",
  "mock.translation|insight": "Insight",
  "mock.translation|report": "Report",
}
`;

exports[`pickCorrectInsightWording > should return translations with report when enableInsightToReport is set to true 1`] = `
{
  "mock.translation": "Report",
  "mock.translation|insight": "Insight",
  "mock.translation|report": "Report",
}
`;
